# ChangeLog for dev-libs/openssl
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.201 2006/09/28 22:08:19 dertobi123 Exp $

  28 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  openssl-0.9.7l.ebuild, openssl-0.9.8d.ebuild:
  ppc stable, bug #145510

  28 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> openssl-0.9.7l.ebuild,
  openssl-0.9.8d.ebuild:
  Stable on hppa wrt security #145510

  28 Sep 2006; Jason Wever <weeve@gentoo.org> openssl-0.9.7l.ebuild,
  openssl-0.9.8d.ebuild:
  Stable on SPARC wrt security bug #145510.

  28 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> openssl-0.9.7l.ebuild,
  openssl-0.9.8d.ebuild:
  Stable on amd64/x86 wrt bug #145510.

  28 Sep 2006; Brent Baude <ranger@gentoo.org> openssl-0.9.7l.ebuild:
  Marking openssl-0.9.7l ppc64 stable for sec bug #145510

*openssl-0.9.8d (28 Sep 2006)
*openssl-0.9.7l (28 Sep 2006)

  28 Sep 2006; Mike Frysinger <vapier@gentoo.org> +openssl-0.9.7l.ebuild,
  +openssl-0.9.8d.ebuild:
  Version bump for security #145510 and #148654.

  24 Sep 2006; Michael Hanselmann <hansmi@gentoo.org>
  openssl-0.9.8c-r2.ebuild:
  Stable on ppc.

*openssl-0.9.8c-r2 (18 Sep 2006)

  18 Sep 2006; Mike Frysinger <vapier@gentoo.org> files/gentoo.config-0.9.8,
  -openssl-0.9.8c-r1.ebuild, +openssl-0.9.8c-r2.ebuild:
  Force people to re-emerge openssl on i686 so that they get the optimized
  version. You will probably have to re-emerge openssh/etc... if you
  experience troubles. Openssl sucks sometimes.

*openssl-0.9.8c-r1 (16 Sep 2006)

  16 Sep 2006; Mike Frysinger <vapier@gentoo.org> -openssl-0.9.8c.ebuild,
  +openssl-0.9.8c-r1.ebuild:
  Remove USE=sse2 for now as it breaks ABI #147758 by Andrew Stimpson and
  revert asm targets for i686.

  15 Sep 2006; Mike Frysinger <vapier@gentoo.org> files/gentoo.config-0.9.8,
  openssl-0.9.8c.ebuild:
  Add support for USE=sse2 and reclassify i686/sparc7 targets #147551.
