@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gentoo.config-0.9.7g 3356 RMD160 8e83cecd44f2dc6b0863bf10b920cae2490250d7 SHA1 9dc82ecc34677b9b9f2758d3c86ae5a8b4d86720 SHA256 1935ea31cf0d4c4a7f5ed0fa4434e9960c7ccef5cb43abcee26cff09472991eb
 MD5 5479124566140e079c2493abe59a1c90 files/gentoo.config-0.9.7g 3356
 RMD160 8e83cecd44f2dc6b0863bf10b920cae2490250d7 files/gentoo.config-0.9.7g 3356
@@ -84,10 +87,10 @@ EBUILD openssl-0.9.7k.ebuild 5402 RMD160 89fd43fb8bc64f345483c21b14690b5f7cbdcae
 MD5 1fdb5bbcd56f2780f574e907be69fb91 openssl-0.9.7k.ebuild 5402
 RMD160 89fd43fb8bc64f345483c21b14690b5f7cbdcae6 openssl-0.9.7k.ebuild 5402
 SHA256 9d19a2b0f8b3c1e7637639b77780abc7939c2fdae6c9ec0864e5ee8df8cd49bb openssl-0.9.7k.ebuild 5402
-EBUILD openssl-0.9.7l.ebuild 5412 RMD160 2cc7c838037cdb188fade843eb4e38d3d7542c37 SHA1 8ff1eaefa88136a6cb8bcf5ed4fec1bdc42b4ee7 SHA256 ac4b4dfb7351e43fbbbdce27db924b8a03cb3679b6986673d6d7cfdf082d3886
-MD5 c65d042486f4e8656c80802318f2ac19 openssl-0.9.7l.ebuild 5412
-RMD160 2cc7c838037cdb188fade843eb4e38d3d7542c37 openssl-0.9.7l.ebuild 5412
-SHA256 ac4b4dfb7351e43fbbbdce27db924b8a03cb3679b6986673d6d7cfdf082d3886 openssl-0.9.7l.ebuild 5412
+EBUILD openssl-0.9.7l.ebuild 5429 RMD160 3c67b8d21b991029a69499e1ca5686d4f6b29de8 SHA1 683b8f694cf470a7fd8ea5e865d695ab20815a30 SHA256 8c25f9faaf04e81542dc3e6fed79dcdea73ec1b927718315745e562ef9308b79
+MD5 31d8b3374bf465c55a33298e7694f4f1 openssl-0.9.7l.ebuild 5429
+RMD160 3c67b8d21b991029a69499e1ca5686d4f6b29de8 openssl-0.9.7l.ebuild 5429
+SHA256 8c25f9faaf04e81542dc3e6fed79dcdea73ec1b927718315745e562ef9308b79 openssl-0.9.7l.ebuild 5429
 EBUILD openssl-0.9.8b.ebuild 4997 RMD160 6900925606a9c21f3ae136fd400e2cc6961be378 SHA1 b7fcdd25e5a7a46d0897771e0cef19689ebf229b SHA256 c6172cdb7c1ad3728ac08c2474004c824a635ba9151a71751cd36dae8c53c1fd
 MD5 4b67c1cdcfc7fe43341536e549eb8db9 openssl-0.9.8b.ebuild 4997
 RMD160 6900925606a9c21f3ae136fd400e2cc6961be378 openssl-0.9.8b.ebuild 4997
@@ -96,14 +99,14 @@ EBUILD openssl-0.9.8c-r2.ebuild 5516 RMD160 611d53a1ba338a78a10a56aeec0a046c16f8
 MD5 4d09331c22c10fbfa527a17b040a6e08 openssl-0.9.8c-r2.ebuild 5516
 RMD160 611d53a1ba338a78a10a56aeec0a046c16f839d4 openssl-0.9.8c-r2.ebuild 5516
 SHA256 69c69ec5ca42dfebb55ef24a9df610f4b2637a0c9a43036896e2f714fd944396 openssl-0.9.8c-r2.ebuild 5516
-EBUILD openssl-0.9.8d.ebuild 5522 RMD160 e8ad279506c8e737fe779fbd0089ce475e7f1df5 SHA1 8c0a4551f9123ba6fc0c29bf57c97230d532fc72 SHA256 ca7d1d863b2204247360fd20752ded26fd278960ce10be46cc1c06dbc4989a51
-MD5 41ab025c1501711080f496ce5ef794c7 openssl-0.9.8d.ebuild 5522
-RMD160 e8ad279506c8e737fe779fbd0089ce475e7f1df5 openssl-0.9.8d.ebuild 5522
-SHA256 ca7d1d863b2204247360fd20752ded26fd278960ce10be46cc1c06dbc4989a51 openssl-0.9.8d.ebuild 5522
-MISC ChangeLog 30954 RMD160 5259869365956aa84b4bc78653d08ea665d35d5a SHA1 bda549389a714510a14cd9da0b58723a5952fbdb SHA256 dc730b1172c9b534ac2d73a7204a4f1d9ab71d6d6ac115277ee5ffab3f85f3f1
-MD5 97e32f158437b2a69b965694d2a9b33f ChangeLog 30954
-RMD160 5259869365956aa84b4bc78653d08ea665d35d5a ChangeLog 30954
-SHA256 dc730b1172c9b534ac2d73a7204a4f1d9ab71d6d6ac115277ee5ffab3f85f3f1 ChangeLog 30954
+EBUILD openssl-0.9.8d.ebuild 5539 RMD160 48f323ba0827bbb1efebad12ceb47a52701872f3 SHA1 45b810d16014f41989bdb485e80dee7e0b6ccdec SHA256 2c46846d50c2f10bbd1189ccd11381b52e3a3aa2529e25991056b2f764b790e6
+MD5 cf526c7eea702fdeeb7ba8ff13ce0bc8 openssl-0.9.8d.ebuild 5539
+RMD160 48f323ba0827bbb1efebad12ceb47a52701872f3 openssl-0.9.8d.ebuild 5539
+SHA256 2c46846d50c2f10bbd1189ccd11381b52e3a3aa2529e25991056b2f764b790e6 openssl-0.9.8d.ebuild 5539
+MISC ChangeLog 31088 RMD160 9338a1aeab26e034b91d89feefd65e05fb30ce0e SHA1 e431b3ecaaa43bf18dfdbd634f3878a3ceefbd6a SHA256 155663862b243d3cf3e21f6d23128d39d78f4d34afaa3fd555009066430a968e
+MD5 14658ecc7b8188ca9ddff893ac3d0cb0 ChangeLog 31088
+RMD160 9338a1aeab26e034b91d89feefd65e05fb30ce0e ChangeLog 31088
+SHA256 155663862b243d3cf3e21f6d23128d39d78f4d34afaa3fd555009066430a968e ChangeLog 31088
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -126,3 +129,10 @@ SHA256 fdcfdfe6232573573e817138ff76277a9161c65fc21fe52b77dfb9a2a1fc863a files/di
 MD5 c860eede8676360f4cd66b1fcb17345c files/digest-openssl-0.9.8d 247
 RMD160 fc03af9cd4ca71ec400924bfd866e09b0a8d59a7 files/digest-openssl-0.9.8d 247
 SHA256 f71ab1e8bddbc1f5dfcfafba984d0c2c95088b751768ff691f5fcc911be601a8 files/digest-openssl-0.9.8d 247
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFFHrhHamhnQswr0vIRAkN/AJ94EBOSw0/v8NLeL4DrgHsmftwWgwCfSq/U
+1cqlhir88wIyWRf2GE82Eb0=
+=LSY6
+-----END PGP SIGNATURE-----
