@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/openssl-0.9.8d.ebuild,v 1.7 2006/09/28 22:08:19 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/openssl-0.9.8d.ebuild,v 1.8 2006/09/30 18:32:02 vapier Exp $
 
 inherit eutils flag-o-matic toolchain-funcs
 
@@ -15,6 +15,7 @@ IUSE="bindist emacs sse2 test zlib"
 
 RDEPEND=""
 DEPEND="${RDEPEND}
+	x11-misc/makedepend
 	sys-apps/diffutils
 	>=dev-lang/perl-5
 	test? ( sys-devel/bc )"
