@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/openssl
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.201 2006/09/28 22:08:19 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.202 2006/09/30 18:32:02 vapier Exp $
+
+  30 Sep 2006; Mike Frysinger <vapier@gentoo.org> openssl-0.9.7l.ebuild,
+  openssl-0.9.8d.ebuild:
+  Pull in x11-misc/makedepend #149583.
 
   28 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
   openssl-0.9.7l.ebuild, openssl-0.9.8d.ebuild:
